[package]
name = "superviseur"
version = "0.1.0-alpha.3"
edition = "2021"
repository = "https://github.com/tsirysndr/superviseur"
license = "MPL-2.0"
readme = "README.md"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
keywords = ["process", "supervisor", "cli"]
description = "A simple process supervisor (a single binary with zero dependencies) written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = "3.2.20"
owo-colors = "3.5.0"
tokio = { version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"] }
tonic = "0.8.3"
prost = "0.11.8"
tonic-web = "0.4.0"
futures = "0.3.26"
uuid = { version = "1.3.0", features = ["v4"] }
serde = "1.0.152"
dirs = "4.0.0"
hcl-rs = "0.12.3"
toml = "0.7.2"
bat = "0.22.1"
futures-util = "0.3.26"
sysinfo = "0.28.1"
tokio-stream = { version = "0.1.12", features = ["net"] }
tabled = "0.10.0"
nix = "0.26.2"
chrono = "0.4.23"
tower = "0.4.13"
actix-web = "4.3.1"
rust-embed = { version = "6.6.0", features = ["debug-embed", "actix"] }
mime_guess = "2.0.4"
open = "3.4.0"
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
local-ip-addr = "0.1.1"
slab = "0.4.8"
futures-channel = "0.3.26"
once_cell = "1.17.1"
actix-cors = "0.6.4"
sha256 = "1.1.2"
names = "0.14.0"

[build-dependencies]
tonic-build = "0.8"
