[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "Define and run multi-service applications on isolated environments with Nix or Docker"
edition = "2021"
keywords = ["compose", "supervisor", "cli", "docker", "nix"]
license = "MPL-2.0"
name = "superviseur"
readme = "../../README.md"
repository = "https://github.com/tsirysndr/superviseur"
version = "0.1.0-alpha.13"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.69"
chrono = "0.4.24"
clap = "3.2.20"
colored_json = "3.2.0"
hcl-rs = "0.12.3"
indexmap = {version = "1.9.2", features = ["serde"]}
inquire = "0.6.2"
local-ip-addr = "0.1.1"
open = "3.2.0"
owo-colors = "3.5.0"
serde_json = "1.0.96"
superviseur-server = {version = "0.1.0", path = "../server"}
superviseur-types = {version = "0.1.0", path = "../types"}
tabled = "0.10.0"
tokio = {version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"]}
tokio-stream = {version = "0.1.12", features = ["net"]}
toml = "0.7.2"
tonic = "0.8.3"
tower = "0.4.13"
