[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "A plugin to spawn a vscode tunnel for superviseur project"
edition = "2021"
keywords = ["tunnel", "supervisor", "cli", "vscode"]
license = "MPL-2.0"
name = "superviseur-code"
repository = "https://github.com/tsirysndr/superviseur"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = {version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread", "sync"]}
