[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "Define and run multi-service applications on isolated environments with Nix or Docker"
edition = "2021"
keywords = ["compose", "supervisor", "cli", "docker", "nix"]
license = "MPL-2.0"
name = "superviseur-core"
repository = "https://github.com/tsirysndr/superviseur"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.4"
dyn-clone = "1.0.11"
futures = "0.3.26"
futures-util = "0.3.26"
notify = "5.1.0"
superviseur-drivers = {path = "../drivers", version = "0.1.0"}
superviseur-graphql = {path = "../graphql", version = "0.1.0"}
superviseur-log = {path = "../log", version = "0.1.0"}
superviseur-macros = {path = "../macros", version = "0.1.0"}
superviseur-provider = {path = "../provider", version = "0.1.0"}
superviseur-types = {path = "../types", version = "0.1.0"}
tantivy = "0.19.2"
tokio = {version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"]}
