[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "Define and run multi-service applications on isolated environments with Nix or Docker"
edition = "2021"
keywords = ["compose", "supervisor", "cli", "docker", "nix"]
license = "MPL-2.0"
name = "superviseur-graphql"
repository = "https://github.com/tsirysndr/superviseur"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
futures = "0.3.26"
futures-channel = "0.3.26"
futures-util = "0.3.26"
indexmap = {version = "1.9.2", features = ["serde"]}
names = "0.14.0"
once_cell = "1.17.1"
slab = "0.4.8"
superviseur-macros = {path = "../macros", version = "0.1.0"}
superviseur-provider = {path = "../provider", version = "0.1.0"}
superviseur-types = {path = "../types", version = "0.1.0"}
superviseur-util = {path = "../util", version = "0.1.0"}
tokio = {version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"]}
tokio-stream = {version = "0.1.12", features = ["net"]}
