[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "Define and run multi-service applications on isolated environments with Nix or Docker"
edition = "2021"
keywords = ["compose", "supervisor", "cli", "docker", "nix"]
license = "MPL-2.0"
name = "superviseur-provider"
repository = "https://github.com/tsirysndr/superviseur"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
hcl-rs = "0.12.3"
indexmap = {version = "1.9.2", features = ["serde"]}
superviseur-types = {path = "../types", version = "0.1.0"}
