[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "Define and run multi-service applications on isolated environments with Nix or Docker"
edition = "2021"
keywords = ["compose", "supervisor", "cli", "docker", "nix"]
license = "MPL-2.0"
name = "superviseur-webui"
repository = "https://github.com/tsirysndr/superviseur"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
mime_guess = "2.0.4"
rust-embed = {version = "6.6.0", features = ["debug-embed", "actix"]}
superviseur-core = {version = "0.1.0", path = "../core"}
superviseur-graphql = {version = "0.1.0", path = "../graphql"}
superviseur-provider = {version = "0.1.0", path = "../provider"}
superviseur-types = {version = "0.1.0", path = "../types"}
tokio = {version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"]}
