[package]
edition = "2021"
name = "http-server-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
slight-http-handler-macro = {git = "https://github.com/deislabs/spiderlightning"}
slight-http-server-macro = {git = "https://github.com/deislabs/spiderlightning"}
wit-bindgen-rust = {git = "https://github.com/fermyon/wit-bindgen-backport"}
wit-error-rs = {git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e"}
